--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1503095396549-807759245b35?w=800" alt="Toneel">
+                    <img src="images/eurka.jpg" alt="Toneel">
                     <div class="gallery-item-content">
                         <h3>Eureka Toneel</h3>
                         <p>Toneelvereniging met passie voor theater en voorstellingen</p>
@@ -734,7 +734,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1511192336575-5a79af67a629?w=800" alt="Dans">
+                    <img src="images/togido.png" alt="Dans">
                     <div class="gallery-item-content">
                         <h3>TOGIDO</h3>
                         <p>Dans- en gymnastieksportvereniging voor alle leeftijden</p>
