--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
             <h1>Cultuur in Gieten</h1>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800" alt="Gemengd Koor">
+                    <img src="images/gemengdkoor.png" alt="Gemengd Koor">
                     <div class="gallery-item-content">
                         <h3>Gemengd Koor Gieten</h3>
                         <p>Zingende vereniging voor muziekliefhebbers in Gieten</p>
@@ -737,13 +737,13 @@
                     <img src="images/togido.png" alt="Dans">
                     <div class="gallery-item-content">
                         <h3>TOGIDO</h3>
-                        <p>Dans- en gymnastieksportvereniging voor alle leeftijden</p>
+                        <p>Muziekvereniging Togido Eext, opgericht in 1928</p>
                         <a href="https://togido.nl/" target="_blank" class="gallery-link">Bezoek Website →</a>
                     </div>
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1511192336575-5a79af67a629?w=800" alt="Muziekschool">
+                    <img src="images/dehondsrug.png" alt="Muziekschool">
                     <div class="gallery-item-content">
                         <h3>Muziekschool De Hondsrug</h3>
                         <p>Muziekonderwijs voor jong en oud in verschillende instrumenten</p>
@@ -752,7 +752,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?w=800" alt="Bibliotheek">
+                    <img src="images/bibliotheek.png" alt="Bibliotheek">
                     <div class="gallery-item-content">
                         <h3>Bibliotheek Gieten</h3>
                         <p>Boeken lenen, studeren en culturele activiteiten bijwonen</p>
