--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                 </div>
 
                 <div class="photo-card" onclick="showPage('featured')">
-                    <img src="https://images.unsplash.com/photo-1569336415962-a4bd9f69cd83?w=800" alt="Route">
+                    <img src="images/routekaart.png" alt="Route">
                     <div class="photo-card-content">
                         <h2>Cultuur Route</h2>
                         <p>Volg de cultuurroute door Gieten met alle belangrijke stops</p>
@@ -725,7 +725,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="images/eurka.jpg" alt="Toneel">
+                    <img src="images/eureka.jpg" alt="Toneel">
                     <div class="gallery-item-content">
                         <h3>Eureka Toneel</h3>
                         <p>Toneelvereniging met passie voor theater en voorstellingen</p>
@@ -761,7 +761,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1582555172866-f73bb12a2ab3?w=800" alt="Museum">
+                    <img src="images/dekluis.jpg" alt="Museum">
                     <div class="gallery-item-content">
                         <h3>Dorpsmuseum De Kluisext</h3>
                         <p>Ontdek de rijke geschiedenis van Gieten en omgeving</p>
