--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
             <h1>Welkom bij Cultuur in Gieten</h1>
             <div class="photo-grid">
                 <div class="photo-card" onclick="showPage('info')">
-                    <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=800" alt="School">
+                    <img src="images/logoobsgieten.jpeg" alt="School">
                     <div class="photo-card-content">
                         <h2>Cultuur bij OBS Gieten</h2>
                         <p>Ontdek de culturele activiteiten en tradities op onze basisschool</p>
@@ -462,7 +462,7 @@
                 </div>
 
                 <div class="photo-card" onclick="showPage('gallery')">
-                    <img src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?w=800" alt="Gieten">
+                    <img src="images/wapengieten.jpeg alt="Gieten">
                     <div class="photo-card-content">
                         <h2>Cultuur in Gieten</h2>
                         <p>Verken de culturele plekken en bezienswaardigheden in Gieten</p>
@@ -776,7 +776,7 @@
             <h1>Cultuur Route</h1>
             <div class="featured-card">
                 <a href="https://maps.app.goo.gl/7WV8KVU1UFDek93E9" target="_blank">
-                    <img src="https://images.unsplash.com/photo-1569336415962-a4bd9f69cd83?w=1200" 
+                    <img src="images/routekaart.png" 
                          alt="Route kaart" 
                          class="featured-image">
                 </a>
