--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                 </div>
 
                 <div class="photo-card" onclick="showPage('gallery')">
-                    <img src="images/wapengieten.jpeg alt="Gieten">
+                    <img src="images/wapengieten.jpeg" alt="Gieten">
                     <div class="photo-card-content">
                         <h2>Cultuur in Gieten</h2>
                         <p>Verken de culturele plekken en bezienswaardigheden in Gieten</p>
