--- a/index.html
+++ b/index.html
@@ -784,12 +784,11 @@
                 <div class="featured-content">
                     <h2>Op zoek naar cultuur in Gieten</h2>
                     <p>
-                        Gieten heeft verrassende kunstwerken, ontdek deze op een mooie wandeling door dit prachtige dorp.
+                        Gieten heeft verrassende kunstwerken, monumenten en ander bezienswaardigheden. Ontdek deze op een mooie wandeling door dit prachtige dorp. 
                     </p>
                     <p>
                         Klik op de afbeelding hierboven of gebruik de knop hieronder om de volledige 
-                        routebeschrijving te bekijken in Google Maps. Daar vind je gedetailleerde 
-                        navigatie-instructies en informatie over alle stops.
+                        routebeschrijving te bekijken in Google Maps.
                     </p>
                     
                     <a href="https://maps.app.goo.gl/7WV8KVU1UFDek93E9" 
